--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.4",
-    "@types/express": "^4.16.0"
+    "@types/express": "^4.16.0",
+    "@types/socket.io": "^3.0.2",
+    "typescript": "^5.2.2"
   }
 }
